modified:   index.html 	modified:   login.html 	modified:   signup.html

--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
         <p class="lead">You can see all kinds of data here</p>
       </div>
 
-      <div class="container mx-200">
+      <div class="container mx-200 border border-dark p-4 shadow bg-white">
         <form >
             <div class="form-group">
               <label >Email address</label>
