--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html  lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -10,7 +10,7 @@
 
     <title>Hello, world!</title>
   </head>
-  <body>
+  <body class="border-2 border-dark">
     <nav class="navbar navbar-light bg-info">
         <a class="navbar-brand text-white font-size-8vw" href="index.html">Home</a>
         
@@ -22,9 +22,9 @@
         <p class="lead">You can see all kinds of data here</p>
       </div>
 
-      <div class="container mx-100"><form>
+      <div class="container mx-100 border border-dark shadow p-4 bg-white"><form>
         <div class="form-row">
-          <div class="form-group col-md-6">
+          <div class="form-group col-md-6"> 
             <label for="inputEmail4">First Name</label>
             <input type="text" class="form-control"  placeholder="First Name">
           </div>
